# BuildMediaInfo

./: .gitignore  README.md
cmds/: CMakeLists.txt  ios-build.sh  linux-build.sh  mac-build.sh  win-build.bat  win-build.cmake
cmds/Android/app/: build.gradle
cmds/Android/app/src/androidTest/java/com/oxd_net/myapplication/: ExampleInstrumentedTest.java
cmds/Android/app/src/main/: AndroidManifest.xml
cmds/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cmds/Android/app/src/main/java/com/oxd_net/myapplication/: MainActivity.java
cmds/Android/app/src/test/java/com/oxd_net/myapplication/: ExampleUnitTest.java
cmds/Android/gradle/wrapper/: gradle-wrapper.properties
